fix: button connect on mobile device

--- a/app/globals.css
+++ b/app/globals.css
@@ -102,6 +102,7 @@ html {
 	body {
 		background-color: #060610;
 		color: #dddad4;
+		overflow-x: hidden;
 	}
 }
 
